--- a/views/addpage.html
+++ b/views/addpage.html
@@ -34,10 +34,10 @@
   </div>
 
   <div class="form-group">
-    <label for="status" class="col-sm-2 control-label">Page Status</label>
-    <div class="col-sm-10">
-      <input name="status" type="text" class="form-control"/>
-    </div>
+    <select name="status">
+      <option>open</option>
+      <option>closed</option>
+    </select>
   </div>
 
   <div class="col-sm-offset-2 col-sm-10">
