--- a/views/wikipage.html
+++ b/views/wikipage.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  <h3> {{ currentPage.title }} <small> (<a href="{{ currentPage.title }}/similar">Similar</a>)</small></h3>
-  <h4>by <a href="/wiki/user/{{ currentPage.name }}">{{ currentPage.name }}</a></h4>
+  <h3> {{ page.title }} <small> (<a href="{{ page.title }}/similar">Similar</a>)</small></h3>
+  <h4>by <a href="/wiki/user/{{ page.name }}">{{ currentPage.name }}</a></h4>
   <div>PLACEHOLDER TAG LIST</div>
   <hr/>
-<div><a href="/wiki/user/{{ currentPage.name }}"> {{ currentPage.name }} </a></div>
+<div><a href="/wiki/user/{{ page.name }}"> {{ page.name }} </a></div>
   <div class="page-body">{{ currentPage.content }}</div>
   <hr/>
-  <a href="PLACEHOLDER_URL_TITLE/edit" class="btn btn-primary">edit this page</a>
-  <a href="PLACEHOLDER_URL_TITLE/delete" class="btn btn-danger">delete this page</a>
+  <a href="{{ page.route }}/edit" class="btn btn-primary">edit this page</a>
+  <a href="{{ page.route }}/delete" class="btn btn-danger">delete this page</a>
 {% endblock %}
